add : Chapter 2 까지 실습 완료

--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,26 @@ plugins {
     id 'java'
 }
 
+apply plugin: 'java'
+
 group = 'com.nackwon.sb'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
-    mavenCentral()
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    // gradle 5.x 이상 등록 방법
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+
 }
 
 tasks.named('test') {
