--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,11 @@ dependencies {
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    //mustache
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
+
+    // Oauth2.0
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
