--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:h2:mem:testdb
 
 # Google Login
 spring.profiles.include=oauth
+
+# \uC138\uC158 \uC800\uC7A5\uC18C \uC124\uC815
+spring.session.store-type=jdbc
